to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the unofficial "swig1.3" Debian
package that is available from:
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian

Eventually this branch will be merged back to the trunk of the CVS
tree (maybe).

Version 1.3.13 (In progress)
============================
06/03/2002: beazley
            Fixed a bug with struct declarations and typedef. For example:

                 typedef struct Foo Foo;
                 struct Foo {
                    ...
                 };

            A few other subtle struct related typing problems were
            also resolved.

Version 1.3.12 (June 2, 2002)
=============================

05/30/2002: beazley
            Fixed problem related to forward template class declarations and
            namespaces.  Bug reported by Marcelo Matus.

05/30/2002: beazley
            Added 'make uninstall' target.  Contributed by Joel Reed.

05/29/2002: beazley
            Fixed rather insidious bug with %rename, %feature and template specialization.
            For example:

                %exception vector::__getitem__ {
                     ... some exception ...
                }

                template<class T> class vector {
                    ...
                    T __getitem__(int index);       // Fine
                    ...
                };

                template<> class vector<int> {
                    ...
                    T __getitem__(int index);       // Oops.
                    ...
                };

            Now, the %exception directive (and other features) should correctly apply to
            both vector and specializations.

05/29/2002: beazley
            Subtle changes to %template() directive.   Template arguments are now
            reduced to primitive types in template matching.  For example:

               template<class T> class vector<T *> {
                ... partial specialization ...